# nodebox.rst

./: .env.template  .gitignore  AGENTS.md  Cargo.toml  STYLE_GUIDE.md
.claude/: settings.json
crates/nodebox-cli/: Cargo.toml
crates/nodebox-cli/src/: main.rs
crates/nodebox-core/examples/: demo.rs
crates/nodebox-core/src/node/: library.rs  node.rs
crates/nodebox-gui/: Cargo.toml
crates/nodebox-gui/src/: address_bar.rs  animation_bar.rs  app.rs  canvas.rs  components.rs  eval.rs  export.rs  handles.rs  history.rs  icon_cache.rs  lib.rs  main.rs  native_menu.rs  network_view.rs  node_library.rs  node_selection_dialog.rs  pan_zoom.rs  panels.rs  recent_files.rs  render_worker.rs  state.rs  theme.rs  timeline.rs  vello_convert.rs  vello_renderer.rs  vello_viewer.rs  viewer_pane.rs
crates/nodebox-gui/tests/: file_tests.rs  handle_tests.rs  integration_tests.rs
crates/nodebox-gui/tests/common/: mod.rs
crates/nodebox-ndbx/src/: parser.rs
crates/nodebox-ndbx/tests/: parse_examples.rs
crates/nodebox-svg/examples/: generate_svg.rs
crates/nodebox-svg/src/: renderer.rs
docs/plans/: wgpu-rendering-plan.md
scripts/: build-mac-bundle.sh  notarize-mac-bundle.sh  setup-secrets.sh  sign-mac-bundle.sh
src/: main.rs
